org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/CaseUsage_Invalid.sysml.xt
//*
XPECT_SETUP org.omg.sysml.xpect.tests.validation.invalid.SysMLTests
	ResourceSet {
		ThisFile {}
		File {from ="/library.kernel/Base.kerml"}
		File {from ="/library.kernel/Occurrences.kerml"}
		File {from ="/library.kernel/Objects.kerml"}
		File {from ="/library.kernel/Performances.kerml"}
		File {from ="/library.kernel/ControlPerformances.kerml"}
		File {from ="/library.kernel/TransitionPerformances.kerml"}
		File {from ="/library.systems/Items.sysml"}
		File {from ="/library.systems/Parts.sysml"}
		File {from ="/library.systems/Ports.sysml"}
		File {from ="/library.systems/Constraints.sysml"}
		File {from ="/library.systems/Requirements.sysml"}
		File {from ="/library.systems/Actions.sysml"}
		File {from ="/library.systems/Calculations.sysml"}
		File {from ="/library.systems/Cases.sysml"}
		File {from ="/library.systems/Analyses.sysml"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library.kernel/Base.kerml"}
				File {from ="/library.kernel/Occurrences.kerml"}
				File {from ="/library.kernel/Objects.kerml"}
				File {from ="/library.kernel/Performances.kerml"}
				File {from ="/library.kernel/ControlPerformances.kerml"}
				File {from ="/library.kernel/TransitionPerformances.kerml"}
				File {from ="/library.systems/Items.sysml"}
				File {from ="/library.systems/Parts.sysml"}
				File {from ="/library.systems/Ports.sysml"}
				File {from ="/library.systems/Constraints.sysml"}
				File {from ="/library.systems/Requirements.sysml"}
				File {from ="/library.systems/Actions.sysml"}
				File {from ="/library.systems/Calculations.sysml"}
				File {from ="/library.systems/Cases.sysml"}
				File {from ="/library.systems/Analyses.sysml"}
			}
		}
	}
END_SETUP
*/
package pkg {
	case def C1;
	case def C2;
	analysis case def AC1;
	analysis case def AC2;
	part def A;
	part def B {
		// XPECT errors --> "A case must be typed by one case definition." at "case c1: C1, C2;"
	 	case c1: C1, C2;
	 	// XPECT errors ---> "A case must be typed by one case definition." at "case c2: A;"
    	case c2: A;
 	 	//* XPECT errors ---
 	 	    "An analysis case must be typed by one analysis case definition." at "analysis case ac1: C1;"
 	 	    "Features must have at least one type" at "analysis case ac1: C1;"
 	 	--- */
    	analysis case ac1: C1;
 	 	// XPECT errors ---> "An analysis case must be typed by one analysis case definition." at "analysis case ac2: AC1, AC2;"
    	analysis case ac2: AC1, AC2;
 	 	// XPECT errors ---> "An analysis case must be typed by one analysis case definition." at "analysis case ac3: B;"
    	analysis case ac3: B;
   	}
}